@@ -75,10 +75,10 @@ public class FieldComparator implements Comparator<BibtexEntry> {
         this.field = field.split(MainTableFormat.COL_DEFINITION_FIELD_SEPARATOR);
         multiplier = reversed ? -1 : 1;
         isTypeHeader = this.field[0].equals(BibtexEntry.TYPE_HEADER);
-        isNameField = this.field[0].equals("author")
-                || this.field[0].equals("editor");
-        isYearField = this.field[0].equals("year");
-        isMonthField = this.field[0].equals("month");
+        isNameField = "author".equals(this.field[0])
+                || "editor".equals(this.field[0]);
+        isYearField = "year".equals(this.field[0]);
+        isMonthField = "month".equals(this.field[0]);
         isNumeric = BibtexFields.isNumeric(this.field[0]);
     }
 
@@ -177,10 +177,10 @@ public class FieldComparator implements Comparator<BibtexEntry> {
         if (f1 instanceof Integer && f2 instanceof Integer) {
             result = ((Integer) f1).compareTo((Integer) f2);
         } else if (f2 instanceof Integer) {
-            Integer f1AsInteger = new Integer(f1.toString());
+            Integer f1AsInteger = Integer.valueOf(f1.toString());
             result = -f1AsInteger.compareTo((Integer) f2);
         } else if (f1 instanceof Integer) {
-            Integer f2AsInteger = new Integer(f2.toString());
+            Integer f2AsInteger = Integer.valueOf(f2.toString());
             result = -((Integer) f1).compareTo(f2AsInteger);
         } else {
             String ours = ((String) f1).toLowerCase();
