@@ -179,7 +179,6 @@ public class FindUnlinkedFilesDialog extends JDialog {
      * Used via reflection in {@link net.sf.jabref.importer.DatabaseFileLookup} to construct this
      * class.
      */
-    @SuppressWarnings("unused")
     private FindUnlinkedFilesDialog() {
     }
 
@@ -239,7 +238,7 @@ public class FindUnlinkedFilesDialog extends JDialog {
         if (store != null) {
             try {
                 String[] dim = store.split(";");
-                dimension = new Dimension(new Integer(dim[0]), new Integer(dim[1]));
+                dimension = new Dimension(Integer.valueOf(dim[0]), Integer.valueOf(dim[1]));
             } catch (Exception ignored) {
                 // Ignored
             }
@@ -396,7 +395,7 @@ public class FindUnlinkedFilesDialog extends JDialog {
         }
 
         String path = textfieldDirectoryPath.getText();
-        if ((path == null) || path.equals("")) {
+        if ((path == null) || "".equals(path)) {
             fileChooser.setCurrentDirectory(lastSelectedDirectory);
         } else {
             fileChooser.setCurrentDirectory(new File(path));
@@ -781,7 +780,7 @@ public class FindUnlinkedFilesDialog extends JDialog {
         buttonScan.setToolTipText(Localization.lang("Searches the selected directory for unlinked files."));
         buttonApply = new JButton(Localization.lang("Apply"));
         buttonApply.setMnemonic('I');
-        buttonApply.setToolTipText(Localization.lang("Starts the import of bibtex entries."));
+        buttonApply.setToolTipText(Localization.lang("Starts the import of BibTeX entries."));
         buttonClose = new JButton(Localization.lang("Close"));
         buttonClose.setToolTipText(Localization.lang("Leave this dialog."));
         buttonClose.setMnemonic('C');
@@ -851,7 +850,7 @@ public class FindUnlinkedFilesDialog extends JDialog {
 
         panelDirectory.setBorder(BorderFactory.createTitledBorder(BorderFactory.createEtchedBorder(), Localization.lang("Select directory")));
         panelFiles.setBorder(BorderFactory.createTitledBorder(BorderFactory.createEtchedBorder(), Localization.lang("Select files")));
-        panelEntryTypesSelection.setBorder(BorderFactory.createTitledBorder(BorderFactory.createEtchedBorder(), Localization.lang("Bibtex entry creation")));
+        panelEntryTypesSelection.setBorder(BorderFactory.createTitledBorder(BorderFactory.createEtchedBorder(), Localization.lang("BibTeX entry creation")));
 
         Insets basicInsets = new Insets(6, 6, 6, 6);
         Insets smallInsets = new Insets(3, 2, 3, 1);
